<resources>
    <string name="app_name">AndroidProjectCollection</string>

    <!-- Main Exercise Strings: Displays All Activities -->
    <string name="layout_exercise_btn">Layout Exercise</string>
    <string name="button_exercise_btn">Button Exercise</string>
    <string name="calculator_exercise_btn">Calculator Exercise</string>
    <string name="midterm_exam_btn">Midterm Exam</string>
    <string name="match3_exercise_btn">Match 3 Exercise</string>
    <string name="passing_intents_exercise_btn">Passing Intents</string>
    <string name="fragments_exercise_btn">Fragments</string>
    <string name="menus_exercise_btn">Menus</string>
    <string name="empty_btn">Empty</string>


    <!-- Button Exercise Strings -->
    <string name="close_btn">Close</string>
    <string name="toast_btn">Toast</string>
    <string name="change_bg_btn">Change BG</string>
    <string name="change_btn_bg_btn">Change Button BG</string>
    <string name="disappear_btn">Disappear</string>
    <string name="return_btn">Return</string>

    <!-- Calculator Exercise Strings -->
    <string name="no_1">1</string>
    <string name="no_2">2</string>
    <string name="no_3">3</string>
    <string name="no_4">4</string>
    <string name="no_5">5</string>
    <string name="no_6">6</string>
    <string name="no_7">7</string>
    <string name="no_8">8</string>
    <string name="no_9">9</string>
    <string name="no_0">0</string>
    <!--    <string name="no_00">00</string>-->
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="times">*</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
    <!--    <string name="percent">%</string>-->
    <string name="point">.</string>
    <string name="clear">clr</string>
    <string name="back">back</string>

    <!-- Midterm Exam TicTacToe -->
    <string name="pOTurn">Player O\'s Turn</string>
    <string name="pXTurn">Player X\'s Turn</string>
    <string name="O">O</string>
    <string name="X">X</string>
    <string name="empty">-</string>
    <string name="pOWins">Player O wins!</string>
    <string name="pXWins">Player X wins!</string>
    <string name="pDraw">It\'s a draw!</string>
    <string name="restart">Restart</string>

    <!-- Match 3 -->
    <string name="scorelbl">Score</string>
    <string name="score_format">%d</string>
    <string name="reset">Reset</string>
    <string name="randomize">Randomize</string>

    <!-- Passing Intents -->
    <string name="registration_title">Student Registration Form</string>
    <string name="complete_name_lbl">Complete Name</string>
    <string name="first_name_placeholder">First Name</string>
    <string name="last_name_placeholder">Last Name</string>
    <string name="gender_lbl">Gender</string>
    <string name="male_lbl">Male</string>
    <string name="female_lbl">Female</string>
    <string name="others_lbl">Others</string>
    <string name="birth_date_lbl">Birth Date</string>
    <string name="phone_number_lbl">Phone Number</string>
    <string name="email_address_lbl">Email Address</string>

    <!-- Additional 5 more data -->
    <string name="address_lbl">Address</string>
    <string name="program_lbl">Degree Program</string>
    <string name="year_level_lbl">Year Level</string>
    <string name="id_number_lbl">ID Number</string>
    <string name="emergency_contact_title">Emergency Contact</string>
    <string name="emergency_contact_name_lbl">Full Name</string>
    <string name="relationship_lbl">Relationship</string>

    <string name="clear_btn">Clear</string>
    <string name="submit_btn">Submit</string>

    <string name="student_profile_title">Student Profile</string>
    <string name="demographics_title">Demographics</string>

    <!--    <string name="return_btn">Return</string>-->


    <!-- Fragments -->

    <!-- Menus -->
    <string name="mItemChange">Change</string>
    <string name="mItemReset">Reset</string>
    <string name="mItemExit">Exit</string>
    <string name="mItemChangeText">Change Text</string>
    <string name="mItemChangeColor">Change Color</string>
    <string name="mItemChangeColorText">Change Color Text</string>
    <string name="mItemChangeTextSize">Change Text Size</string>
    <string name="mItemChangeSize">Change Size</string>

    <string name="default_text">Default</string>
    <string name="changed_text">Changed</string>

</resources>