<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mItemChange"
        android:title="@string/mItemChange" >
        <menu >
            <item
                android:id="@+id/mItemChangeColor"
                android:title="@string/mItemChangeColor" />
            <item
                android:id="@+id/mItemChangeColorText"
                android:title="@string/mItemChangeColorText" />
            <item
                android:id="@+id/mItemChangeTextSize"
                android:title="@string/mItemChangeTextSize" />
            <item
                android:id="@+id/mItemChangeSize"
                android:title="@string/mItemChangeSize" />
            <item
                android:id="@+id/mItemChangeText"
                android:title="@string/mItemChangeText" />
        </menu>
    </item>
    <item
        android:id="@+id/mItemReset"
        android:title="@string/mItemReset" />
    <item
        android:id="@+id/mItemExit"
        android:title="@string/mItemExit" />
</menu>